登録ページの不要処理を削除した

--- a/ClientApp/coffeebook/src/app/component/record/record.component.scss
+++ b/ClientApp/coffeebook/src/app/component/record/record.component.scss
@@ -26,72 +26,20 @@
   margin-bottom: 1rem;
 }
 
-app-tips {
-  position: fixed;
-  bottom: 70px;
-  right: 20px;
-  z-index: 10;
-  // width: 1920px;
-}
-
-form div {
-  // margin-top: 0.5rem;
-}
-
-label {
-  // display: block;
-  // text-align: left;
-}
-
-input, textarea {
-  /* font: 0.875rem "Yu Gothic", sans-serif;
-  height: 1.5rem;
-  width: 16rem;
-  margin-top: 0.2rem;
-  padding: 0.2rem;
-  box-sizing: border-box; */
-
-  /* 下線のみを表示する */
-  // border: none;
-  // border-bottom: 1px solid #999;
-}
-
 textarea {
-  /* 複数行のテキストフィールドをラベルにきちんと揃える */
-  // vertical-align: top;
-
   /* テキスト入力に十分な領域を与える */
   height: 4rem;
-}
-
-input:focus {
-  // border-bottom: 2px solid #96692F;
-  // outline: 0;
-}
-
-textarea:focus {
-  /* アクティブな要素を少し強調する */
-  // box-shadow: 0 0 2px 0 #96692F;
-  // border: 1px solid #FFF !important;
-  // outline: 0;
 }
 
 .submit-container {
   display: flex;
   justify-content: flex-end;
   margin-top: 1rem;
-
-  /*
-  input {
-    width: 240px;
-    cursor: pointer;
-    font: 1em "Yu Gothic UI", sans-serif;
-    background-color: lightgrey;
-    padding: 0;
-    border-bottom: 0rem;
-  }
-
-  input:hover {
-    background-color: #FFE3BF;
-  }*/
 }
+
+/*app-tips {
+  position: fixed;
+  bottom: 70px;
+  right: 20px;
+  z-index: 10;
+}*/
