ページ下部の余白を広げた

--- a/ClientApp/coffeebook/src/styles.scss
+++ b/ClientApp/coffeebook/src/styles.scss
@@ -87,7 +87,7 @@ h6 {
 .content {
   display: flex;
   margin: 32px auto;
-  padding: 0 16px;
+  padding: 0 16px 3rem 16px;
   // max-width: 960px;
   // max-width: 1200px;
   flex-direction: column;
