ログインページを追加、登録・閲覧をログインしたユーザに紐づける機能を実装した

--- a/ClientApp/coffeebook/src/app/component/toolbar/toolbar.component.html
+++ b/ClientApp/coffeebook/src/app/component/toolbar/toolbar.component.html
@@ -32,8 +32,8 @@
   <mat-menu #menu="matMenu" xPosition="before">
     <button mat-menu-item [matMenuTriggerFor]="record">しるす</button>
     <button mat-menu-item [matMenuTriggerFor]="browse">さがす</button>
-    <button mat-menu-item routerLink="/under-construction">ログイン</button>
-    <button mat-menu-item routerLink="/under-construction">会員登録</button>
+    <button mat-menu-item routerLink="/login">ログイン</button>
+    <button mat-menu-item routerLink="/sign-up">会員登録</button>
   </mat-menu>
   <mat-menu #record="matMenu" xPosition="before">
     <button mat-menu-item routerLink="/record/drip">ドリップ</button>
