--- a/ClientApp/coffeebook/src/app/component/browse/browse.component.scss
+++ b/ClientApp/coffeebook/src/app/component/browse/browse.component.scss
@@ -13,6 +13,10 @@
   justify-content: flex-end;
 }
 
+.form-field {
+  width: 100%;
+}
+
 mat-expansion-panel {
   width: 16rem;
   margin-top: 0.5rem;
