閲覧ページにレシピ削除機能を実装した

--- a/ClientApp/coffeebook/src/app/component/browse/browse.component.html
+++ b/ClientApp/coffeebook/src/app/component/browse/browse.component.html
@@ -58,7 +58,7 @@
   <!-- メインコンテンツ -->
   <div class="recipe-container" *ngIf="recipes.length >= 1">
     <div *ngFor="let recipe of recipesNarrowedDown; even as even;">
-      <app-recipe [recipe]="recipe" [even]="even"></app-recipe>
+      <app-recipe [recipe]="recipe" [even]="even" (delete)="onDelete($event)"></app-recipe>
     </div>
   </div>
 
