--- a/ClientApp/coffeebook/src/app/component/recipe/recipe.component.html
+++ b/ClientApp/coffeebook/src/app/component/recipe/recipe.component.html
@@ -126,7 +126,7 @@
 </div>
 <div id="control">
   <div class="example-button-row">
-    <button mat-flat-button color="primary">変更</button>
-    <button mat-flat-button color="primary">削除</button>
+    <!-- <button mat-flat-button color="primary">変更</button> -->
+    <button mat-flat-button color="primary" (click)="onDelete()">削除</button>
   </div>
 </div>
