ユーザーIDの重複チェックを追加した

--- a/ClientApp/coffeebook/src/app/component/sign-up/sign-up.component.html
+++ b/ClientApp/coffeebook/src/app/component/sign-up/sign-up.component.html
@@ -10,8 +10,7 @@
   <form id="form" #myForm="ngForm" (ngSubmit)="submit()" novalidate>
 
     <mat-error id="error-message" *ngIf="!isSucceded">
-      ユーザー登録に失敗しました。<br>
-      しばらくしてから、再度登録してください。
+      {{errorMessage}}
     </mat-error>
 
     <div class="form-group">
